Text alignment fixed

--- a/Style.css
+++ b/Style.css
@@ -211,15 +211,6 @@ body {
     height: 100vh;
     width: 100vw;
     letter-spacing: 10px;
-    /* background-repeat: no-repeat;
-    background-size: cover;
-    position: relative; */
-}
-
-span {
-    font-size: 8rem;
-    text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
-    color: rgb(206, 255, 255);
 }
 
 #background-video {
@@ -246,6 +237,10 @@ span {
     z-index: 2;
 }
 
+.homePage .heading .topText {
+    border-bottom: none;
+    display: inline-block;
+}
 
 
 
